--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,18 +2,30 @@ backend:
   name: git-gateway
   branch: main # Branch to update (optional; defaults to master)
 publish_mode: editorial_workflow
-media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
+media_folder: "public/images/uploads" # Media files will be stored in the repo under static/images/uploads
 public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
 collections:
-  - name: "blog" # Used in routes, e.g., /admin/collections/blog
-    label: "Blog" # Used in the UI
-    folder: "_posts/blog" # The path to the folder where the documents are stored
-    create: true # Allow users to create new documents in this collection
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
-    fields: # The fields for each document, usually in front matter
-      - { label: "Layout", name: "layout", widget: "hidden", default: "blog" }
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Featured Image", name: "thumbnail", widget: "image" }
-      - { label: "Rating (scale of 1-5)", name: "rating", widget: "number" }
-      - { label: "Body", name: "body", widget: "markdown" }
+  - name: "car"
+    label: "Car"
+    folder: "_posts/car"
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    fields:
+      - { label: "Make", name: "make", widget: string }
+      - { label: "Model", name: "model", widget: string }
+      - { label: "Model Year", name: "modelYear", widget: "number" }
+      - { label: "Mileage", name: "mileage", widget: "number" }
+      - { label: "Engine Size cm3", name: "engineSize", widget: "number" }
+      - label: "Transmission"
+        name: "transmission"
+        widget: "select"
+        options:
+          - { label: "Automatic", value: "Automatic" }
+          - { label: "Manual", value: "Manual" }
+      - { label: "Price Per Day", name: "price", widget: "number" }
+      - { label: "Featured Photo", name: "thumbnail", widget: "image" }
+      - label: "Gallery"
+        name: "galleryImages"
+        widget: "list"
+        summary: "{{fields.image}}"
+        field: { label: "Image", name: "image", widget: "image" }
