--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -18,7 +18,7 @@ collections:
     label: "Car"
     folder: "src/content/cars"
     create: true
-    slug: "{{fields.identifier}}"
+    slug: "{{slug}}"
     fields:
       - {
           label: "Title",
