addition of new sections

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -14,6 +14,26 @@ collections:
     fields:
       - { label: "Heading", name: "heading", widget: "string" }
       - { label: "Subheading", name: "subheading", widget: "string" }
+  - name: "about"
+    label: "About Us"
+    folder: "src/content/about"
+    create: false
+    delete: false
+    slug: "{{slug}}"
+    fields:
+      - label: "Paragraphs"
+        name: "paragraphs"
+        widget: "list"
+        field: { label: "Content", name: "content", widget: "string" }
+      - label: "Why Choose Us list"
+        name: "whyChooseUsList"
+        widget: "list"
+        field:
+          {
+            label: "Why Choose Us list item",
+            name: "whyChooseUsListItem",
+            widget: "string",
+          }
   - name: "car"
     label: "Car"
     folder: "src/content/cars"
@@ -24,7 +44,7 @@ collections:
           label: "Title",
           name: "title",
           widget: "string",
-          hint: "Used to help you identify exact item you are looking for and as a part of URL",
+          hint: "Used to help you identify exact item you are looking for and as a part of URL (preferably unique).",
         }
       - { label: "Make", name: "make", widget: "string" }
       - { label: "Model", name: "model", widget: "string" }
@@ -44,3 +64,25 @@ collections:
         widget: "list"
         summary: "{{fields.image}}"
         field: { label: "Image", name: "image", widget: "image" }
+  - name: "servicesAndFeatures"
+    label: "Services And Features"
+    folder: "src/content/services-and-features"
+    create: false
+    delete: false
+    slug: "{{slug}}"
+    fields:
+      - label: "Services List"
+        name: "servicesList"
+        widget: "list"
+        summary: "{{fields.serviceHeading}}"
+        fields:
+          - {
+              label: "Service Heading",
+              name: "serviceHeading",
+              widget: "string",
+            }
+          - {
+              label: "Service Description",
+              name: "serviceDescription",
+              widget: "string",
+            }
