--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^3.1.3",
     "astro": "^2.6.1",
+    "astro-icon": "^0.8.1",
     "tailwindcss": "^3.3.2"
   }
 }
