--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -21,6 +21,7 @@ collections:
     delete: false
     slug: "{{slug}}"
     fields:
+      - { label: "Title", name: "title", widget: "string" }
       - label: "Paragraphs"
         name: "paragraphs"
         widget: "list"
@@ -71,6 +72,7 @@ collections:
     delete: false
     slug: "{{slug}}"
     fields:
+      - { label: "Title", name: "title", widget: "string" }
       - label: "Services List"
         name: "servicesList"
         widget: "list"
