--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -32,8 +32,8 @@ collections:
             name: "position"
             widget: "select"
             options:
-              - { label: "Left", value: false }
-              - { label: "Right", value: true }
+              - { label: "Left", value: "left" }
+              - { label: "Right", value: "right" }
       - label: "Paragraphs"
         name: "paragraphs"
         widget: "list"
