--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -24,7 +24,7 @@ collections:
       - label: "Thumbnail"
         name: "thumbnail"
         widget: "object"
-        summary: "{{fields.description}}"
+        summary: "{{fields.image}}"
         fields:
           - { label: "Image", name: "image", widget: "image" }
           - { label: "Description", name: "description", widget: "string" }
