Contact section addition

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -13,6 +13,7 @@ collections:
     fields:
       - { label: "Heading", name: "heading", widget: "string" }
       - { label: "Subheading", name: "subheading", widget: "string" }
+      - { label: "Background", name: "background", widget: "image" }
   - name: "about"
     label: "About Us"
     folder: "src/content/about"
