--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -104,7 +104,7 @@ collections:
           - label: "Car"
             name: "car"
             widget: "relation"
-            collection: "cars"
+            collection: "car"
             search_fields: ["make", "model"]
             value_field: "{{slug}}"
             display_fields:
