--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -99,27 +99,22 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - label: "Bestsellers"
         name: "bestsellers"
-        widget: "list"
-        fields:
-          - label: "Car"
-            name: "car"
-            widget: "relation"
-            multiple: true
-            collection: "car"
-            search_fields: ["title"]
-            value_field: "{{slug}}"
-            display_fields: ["title"]
+        widget: "relation"
+        multiple: true
+        min: 3
+        collection: "car"
+        search_fields: ["title"]
+        value_field: "{{slug}}"
+        display_fields: ["title"]
       - label: "New Cars"
         name: "newCars"
-        widget: "list"
-        fields:
-          - label: "Car"
-            name: "car"
-            widget: "relation"
-            collection: "car"
-            search_fields: ["title"]
-            value_field: "{{slug}}"
-            display_fields: ["title"]
+        widget: "relation"
+        multiple: true
+        min: 3
+        collection: "car"
+        search_fields: ["title"]
+        value_field: "{{slug}}"
+        display_fields: ["title"]
   - name: "servicesAndFeatures"
     label: "Services And Features"
     folder: "src/content/services-and-features"
