--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -132,6 +132,7 @@ collections:
     slug: "{{slug}}"
     fields:
       - { label: "Title", name: "title", widget: "string" }
+      - { label: "Featured Image", name: "featuredImage", widget: "string" }
       - { label: "Background Image", name: "bgImage", "image" }
       - label: "Services List"
         name: "servicesList"
