--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "astro": "^2.6.1",
     "astro-icon": "^0.8.1",
     "tailwindcss": "^3.3.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
