--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -157,4 +157,11 @@ collections:
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Featured Image", name: "featuredImage", widget: "image" }
+      - {
+          label: "Intro",
+          name: "intro",
+          widget: "markdown",
+          buttons: ["bold", "italic"],
+          editor_components: [],
+        }
       - { label: "Body", name: "body", widget: "markdown" }
