--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -156,6 +156,7 @@ collections:
     slug: "{{slug}}"
     fields:
       - { label: "Title", name: "title", widget: "string" }
+      - { label: "Publishing Date", name: "publishingDate", widget: "date" }
       - { label: "Featured Image", name: "featuredImage", widget: "image" }
       - {
           label: "Intro",
