--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.1.3",
+    "@astropub/md": "^0.2.0",
     "astro": "^2.6.1",
     "astro-icon": "^0.8.1",
     "tailwindcss": "^3.3.2"
