--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^2.2.1",
     "@astrojs/tailwind": "^3.1.3",
     "@astropub/md": "^0.2.0",
+    "@egjs/preact-flicking": "^4.10.10",
     "astro": "^2.6.1",
     "astro-icon": "^0.8.1",
+    "preact": "^10.15.1",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
