--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/preact": "^2.2.1",
     "@astrojs/tailwind": "^3.1.3",
     "@astropub/md": "^0.2.0",
+    "@egjs/flicking-plugins": "^4.7.0",
     "@egjs/preact-flicking": "^4.10.10",
     "astro": "^2.6.1",
     "astro-icon": "^0.8.1",
