--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -97,7 +97,7 @@ collections:
         name: "galleryImages"
         widget: "list"
         summary: "{{fields.image}}"
-        field: { label: "Image", name: "image", widget: "image" }
+        field: { label: "Image", name: "image", widget: "image", min: 3 }
   - name: "carBrand"
     label: "Car Brand"
     folder: "src/content/car-brand"
